feat(reservation): add search API and refactor ReservationSearchCondition constructor binding
[English]
- ReservationController: Expose GET /api/reservations for multi-condition search queries.
- SecurityConfig: Expand route matching to /api/reservations/**.
- ReservationSearchCondition: Standardize on single canonical constructor to eliminate Spring MVC DataBinder ambiguity.
- Tests: Synchronize 8-parameter constructor invocations across all repository, service, report, and controller tests.

[한국어]
- ReservationController: 다조건 복합 검색을 위한 GET /api/reservations 목록 조회 엔드포인트 구현.
- SecurityConfig: 목록 검색 및 상세 조회를 모두 포괄하도록 /api/reservations/** 인가 경로 확장.
- ReservationSearchCondition: Spring MVC @ModelAttribute 바인딩 충돌 해소를 위해 기본 생성자 단일화 및 정적 팩토리 메서드 제공.
- 테스트 정렬: 저장소, 서비스, 리포트, 컨트롤러 테스트 전반의 8개 인자 생성자 호출부 동기화 및 전원 통과.